Fix bluriness in level bar, and popup

By shifting the top-left coordinates by half a pixel, to match
the cairo grid.

This makes the outter border of the popup, as well as the
level bar's borders much sharper.

https://bugzilla.gnome.org/show_bug.cgi?id=567249